# duckduckgo-mcp-server

./: QWEN.md  README.md  pyproject.toml
src/duckduckgo_mcp_server/: server.py
